# symbios-audio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: adsr.rs  bake.rs  chorus.rs  filter.rs  gate.rs  genetics.rs  lfo.rs  lib.rs  mix.rs  mixdown.rs  node.rs  noise.rs  oscillator.rs  patch.rs  reverb.rs  sequence.rs  wav.rs
